# agent-pm

./: .bazelignore  .bazelrc  .env.example  .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements_lock.txt
.github/: actionlint.yaml
.github/workflows/: bazel-rbe.yml  ci.yml
agent_pm/: __init__.py  agent_sdk.py  alignment_dashboard.py  alignment_export.py  alignment_log.py  alignment_stream.py  auth.py  cost_tracking.py  database.py  dspy_program.py  embeddings.py  guardrails.py  health.py  logging_config.py  mcp_server.py  metrics.py  models.py  openai_utils.py  planner.py  prd_changelog.py  prd_versions.py  procedure_runner.py  procedures.py  rate_limit.py  redis_queue.py  scheduler.py  settings.py  structured_logging.py  task_queue.py  telemetry.py  templates.py  tools.py  traces.py
agent_pm/alignment/: __init__.py  dashboard.py  export.py  log.py
agent_pm/api/: __init__.py  auth.py  guardrails.py  health.py  rate_limit.py
agent_pm/clients/: __init__.py  calendar_client.py  github_client.py  jira_client.py  openai_client.py  pagerduty_client.py  slack_client.py
agent_pm/connectors/: __init__.py  base.py  calendar.py  email.py  github.py  google_drive.py  linear.py  notion.py  sentry.py  slack.py
agent_pm/memory/: __init__.py  long_term.py  short_term.py
agent_pm/observability/: __init__.py  dashboard.py  export.py  metrics.py  structured.py  telemetry.py  traces.py
agent_pm/plugins/: __init__.py  base.py  feedback.py  registry.py  schema.py  secrets.py  slack_notifications.py  ticket_automation.py  warehouse_export.py
agent_pm/prd/: __init__.py  changelog.py  versions.py
agent_pm/storage/: __init__.py  database.py  redis.py  syncs.py  tasks.py
agent_pm/tasks/: __init__.py  playbooks.py  sync.py
agent_pm/utils/: __init__.py  datetime.py  retry.py
config/: agents.yaml  grafana_dashboard.json  plugins.yaml  procedure_schedule.yaml  tools.yaml
docs/: plugins.md  recovery_plan.md
evals/: pm_prd_eval.py
migrations/: env.py
migrations/versions/: 56e1a9d2ba59_initial_schema.py  9c3c01f6f4b8_add_connector_syncs.py
procedures/: agent_pr_security_scan.yaml  dependabot_triage.yaml  deploy_readiness.yaml  idea_to_prd_to_tickets.yaml  weekly_progress_review.yaml
scripts/: alignment_summary.py  export_alignments.py  manage_plugins.py  record_alignment_followup.py  run_evals.py  run_evals_and_notify.py  streamlit_alignments.py
tests/: conftest.py  pytest_main.py  test_agent_sdk.py  test_alignment_dashboard.py  test_alignment_export.py  test_alignment_log.py  test_alignments_api.py  test_app_lifespan.py  test_auth.py  test_clients.py  test_connectors.py  test_dry_run_paths.py  test_health.py  test_metrics.py  test_planner.py  test_plugin_registry.py  test_plugins_api.py  test_procedure_runner.py  test_rate_limit.py  test_task_queue.py  test_tasks_api.py  test_trace_export.py  test_traces.py
tests/storage/: test_database.py  test_redis.py  test_redis_worker.py  test_task_queue.py
